# mp3-voice-translator

./: .gitignore  README.md  config.example.py  main.py  pyproject.toml  requirements.txt  setup.py
mp3_voice_translator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
translator/: __init__.py  audio.py  minimax_tts.py  translator.py  tts.py  whisper.py
